# CMD_Snake

./: CMakeLists.txt  README.md  build.bat
include/: head.h
source/: main.cpp  operationboard.cpp  scoreboard.cpp  screen.cpp  snake.cpp
